--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="./favicon.png">
+    <link rel="icon" type="image/svg+xml" href="images/Coin.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuestCoin</title>
     <meta name="description" content="Pledge your allegiance to the $QUEST.">
@@ -31,16 +31,16 @@
                     class="sm:h-8 h-7 drop-shadow-md " alt="Logo"></a>
             <div>
                 <div class="flex items-center justify-center w-auto h-auto gap-3 "><a class="block py-2 px-3 text-black hover:text-yellow-400 rounded
-              " aria-current="page" href="javascript:void()"><i class=" fa-brands fa-x-twitter fa-lg"
+              " aria-current="page" href="/login"><i class=" fa-brands fa-x-twitter fa-lg"
                             aria-hidden="true"></i></a><a
                         class="block py-2 px-3 text-black hover:text-yellow-400 rounded" aria-current="page"
-                        href="javascript:void()"><span class=" fa-stack fa-xs"><i class="fas fa-circle fa-stack-2x"
+                        href="/login"><span class=" fa-stack fa-xs"><i class="fas fa-circle fa-stack-2x"
                                 aria-hidden="true"></i><i class="text-white fas fa-paper-plane fa-stack-1x "
                                 aria-hidden="true"></i></span></a></div>
             </div>
         </nav>
         <div class="z-[10000] w-screen h-full flex flex-col items-center justify-center bg-[rgba(0,0,0,0.66)] backdrop-blur-md fixed 
-        hiddenimages/som.html
+        hidden
         opacity-0
         
             transition-opacity duration-300 ease-in-out
