--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
                     class="sm:h-8 h-7 drop-shadow-md " alt="Logo"></a>
             <div>
                 <div class="flex items-center justify-center w-auto h-auto gap-3 "><a class="block py-2 px-3 text-black hover:text-yellow-400 rounded
-              " aria-current="page" href="/login"><i class=" fa-brands fa-x-twitter fa-lg"
-                            aria-hidden="true"></i></a><a
+              " aria-current="page" href="#"><i class=" fa-brands fa-x-twitter fa-lg" aria-hidden="true"></i></a><a
                         class="block py-2 px-3 text-black hover:text-yellow-400 rounded" aria-current="page"
-                        href="/login"><span class=" fa-stack fa-xs"><i class="fas fa-circle fa-stack-2x"
+                        href="#"><span class=" fa-stack fa-xs"><i class="fas fa-circle fa-stack-2x"
                                 aria-hidden="true"></i><i class="text-white fas fa-paper-plane fa-stack-1x "
                                 aria-hidden="true"></i></span></a></div>
             </div>
@@ -45,7 +44,7 @@
         
             transition-opacity duration-300 ease-in-out
           "><img src="gifs/FavIcon.gif" class="h-10 sm:h-24 lg:h-16 lg:mb-[-0.5rem]" alt=""></div>
-        <div class="w-screen   flex flex-col items-center justify-center h-screen"><img src="images/LoginDashboard.png"
+        <div class="w-screen   flex flex-col items-center justify-center h-screen"><img src="images/loginDashboard.png"
                 class="fixed  scale-[1.05] lg:block hidden min-h-screen  z-[-10] w-screen bottom-0" alt=""><img
                 src="images/LoginDashboardM.png"
                 class="fixed scale-[1.05]  block lg:hidden min-h-screen bottom-0 w-screen z-[-10]" alt="">
